# castify-client

./: .gitignore  BUILD.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: INSTALL-CLI.md
scripts/: build-dependencies.sh  prune-ytdlp-extractors.py
src/: App.tsx  styles.css
src-tauri/: BUILD.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/entitlements/: yt-dlp.plist
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
src-tauri/src/commands/: auth.rs  billing.rs  feeds.rs  mod.rs  settings.rs  sync.rs
src-tauri/src/services/: api_client.rs  auth.rs  billing.rs  config_store.rs  episode.rs  extractor.rs  feeds.rs  helpers.rs  keychain.rs  mod.rs  sync.rs  sync_download.rs  sync_scan.rs  sync_upload.rs  tauri_store.rs  uploader.rs
src/components/: ConfirmModal.tsx
src/hooks/: useCopyToClipboard.ts  useTauriListener.ts
src/lib/: api.ts  types.ts  updater.ts
src/pages/: Account.tsx  FeedDetail.tsx  FeedsList.tsx  Login.tsx  Settings.tsx
