[package]
name = "castify"
version = "0.1.0"
edition = "2021"
default-run = "castify"

[features]
default = ["gui"]
# Desktop app (Tauri + window). Used by default and by `tauri build`.
gui = [
  "dep:tauri",
  "dep:tauri-plugin-shell",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-notification",
  "dep:tauri-plugin-store",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-autostart",
  "dep:tauri-build",
]

[dependencies]
# GUI (optional) – only when building desktop app
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }

# Shared (always)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
thiserror = "2"
log = "0.4"
rand = "0.8"
# CLI only (not in desktop bundle)
clap = { version = "4", features = ["derive"], optional = true }
dirs = { version = "5", optional = true }
rpassword = { version = "7", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }

[[bin]]
name = "castify"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
